# mts

./: .gitignore  .gitmodules  CMakeLists.txt
scripts/: benchmark-md-bd.sh  collect.py  download.sh  quick-commands.sh
src/: CMakeLists.txt
src/bergamot/: .batch_translator.cpp.swp  .batcher.cpp.swp  .main.cpp.swp  .multifactor_priority.cpp.swp  .request.cpp.swp  .textops.cpp.swp  batch_translator.cpp  batch_translator.h  batcher.cpp  batcher.h  definitions.h  main.cpp  multifactor_priority.h  pcqueue.h  queue.h  request.cpp  request.h  sanelogging.h  service.cpp  service.h  textops.cpp  textops.h  translation_result.cpp  translation_result.h
src/service/: CMakeLists.txt
src/service/api/: api.h  json_request_handler.h  output_options.cpp  output_options.h  rapidjson_utils.cpp  rapidjson_utils.h
src/service/api/bergamot/: json_request_handler.h  node_translation.cpp  node_translation.h
src/service/bintr/: batch_translator.cpp  batch_translator.h  batcher.cpp  batcher.h  definitions.h  multifactor_priority.cpp  multifactor_priority.h  request.cpp  request.h  service.cpp  service.h  test_temporary.cpp  textops.cpp  textops.h
src/service/common/: batch_producer.cpp  batch_queue.h  batch_wrapper.cpp  batch_wrapper.h  batcher.h  plaintext_translation.cpp  plaintext_translation.h  queue.h  queued_input.cpp  queued_input.h  service_typedefs.h  translation_job.cpp  translation_job.h  translation_service.cpp  translation_service.h  translation_worker.cpp  translation_worker.h
src/service/rest/: rest_server.cpp
